<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:layout_marginLeft="10dp"
    android:layout_marginStart="10dp"
    android:id="@+id/mon"
    android:text="@string/monday"
    android:textColor="@color/colorTextRedacting"
    android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/tue"
        android:text="@string/tuesday"
        android:textColor="@color/colorTextRedacting"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/wed"
        android:text="@string/wednesday"
        android:textColor="@color/colorTextRedacting"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/thu"
        android:text="@string/thursday"
        android:textColor="@color/colorTextRedacting"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/fri"
        android:text="@string/friday"
        android:textColor="@color/colorTextRedacting"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/sat"
        android:text="@string/saturday"
        android:textColor="@color/colorTextRedacting"
        android:textSize="15sp"/>
</LinearLayout>