<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nix.scheduleapp.SettingsActivity"
    tools:showIn="@layout/activity_settings">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_pref_text"
        android:text="@string/title_set_week"
        android:textColor="@color/colorTextRedacting"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_week"
        android:layout_below="@+id/title_pref_text"
        android:inputType="number"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_week"
        android:id="@+id/set_first_week_button"
        android:text="@string/set_first_week"
        android:layout_marginTop="7dp"
        android:background="@color/colorPrimary"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/set_first_week_button"
    android:layout_marginTop="10dp"
    android:id="@+id/clear_button"
    android:text="@string/clear_all"
    android:background="@color/colorPrimary"
    android:textSize="15sp"
    android:textColor="@color/colorWhite"
    android:textStyle="bold"/>
</RelativeLayout>
