<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_marginTop="?attr/actionBarSize">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/name"
                android:id="@+id/text1"
                android:textColor="@color/colorTextRedacting"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_below="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_it"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:id="@+id/name_redact"/>
        </RelativeLayout>

            <View style="@style/Divider"
                android:layout_below="@+id/rel1"
                android:layout_marginTop="10dp"
                android:id="@+id/div1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel2"
            android:layout_below="@+id/div1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/teacher_name"
                android:id="@+id/text2"
                android:textColor="@color/colorTextRedacting"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_below="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_it"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:id="@+id/teacher_name_redact"/>
        </RelativeLayout>

            <View style="@style/Divider"
                  android:layout_below="@+id/rel2"
                  android:layout_marginTop="10dp"
                  android:id="@+id/div2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel3"
            android:layout_below="@+id/div2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/audit"
                android:id="@+id/text3"
                android:textColor="@color/colorTextRedacting"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_below="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_it"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:id="@+id/audit_redact"/>
        </RelativeLayout>

            <View style="@style/Divider"
                  android:layout_below="@+id/rel3"
                  android:layout_marginTop="10dp"
                  android:id="@+id/div3"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel4"
            android:layout_below="@+id/div3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/times"
                android:id="@+id/text8"
                android:textColor="@color/colorTextRedacting"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_below="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_it"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:id="@+id/times_redact"/>
        </RelativeLayout>

        <View style="@style/Divider"
              android:layout_below="@+id/rel4"
              android:layout_marginTop="10dp"
              android:id="@+id/div4"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel5"
            android:layout_below="@+id/div4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/day"
                android:id="@+id/text6"
                android:textColor="@color/colorTextRedacting"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text6"
                android:text = "@string/change_it"
                android:id="@+id/day_week"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>

        <View style="@style/Divider"
              android:layout_below="@+id/rel5"
              android:layout_marginTop="10dp"
              android:id="@+id/div5"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel6"
            android:layout_below="@+id/div5">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/week_textview"
                android:id="@+id/text7"
                android:textColor="@color/colorTextRedacting"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text7"
                android:text = "@string/change_it"
                android:id="@+id/week_type"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>

        <View style="@style/Divider"
              android:layout_below="@+id/rel6"
              android:layout_marginTop="10dp"
              android:id="@+id/div6"/>
    </RelativeLayout>
</ScrollView>